publish: Added missing links
generated from commit 483f4ccdb2790647fe4dba6c5c865cba0108f1e3

--- a/index.html
+++ b/index.html
@@ -217,8 +217,9 @@
       </div>
         <ul class="toc-footer">
             <li><a href='https://api.connctd.io/register'>Sign Up for a Developer Key</a></li>
-            <li><a href='https://connctd.com/imprint'>Imprint</a></li>
-            <li><a href='https://github.com/tripit/slate'>Documentation Powered by Slate</a></li>
+            <li><a href='https://connctd.com/privacy'>Imprint</a></li>
+            <li><a href='https://connctd.com/diclaimer'>Disclaimer</a></li>
+            <li><a href='https://connctd.com/pricelist'>Pricelist</a></li>
         </ul>
     </div>
     <div class="page-wrapper">
