publish: Added link
generated from commit 35fd6afa40590b2602c784398524eae20ab0f991

--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
             <li><a href='https://connctd.com/privacy'>Imprint</a></li>
             <li><a href='https://connctd.com/diclaimer'>Disclaimer</a></li>
             <li><a href='https://connctd.com/pricelist'>Pricelist</a></li>
+            <li><a href='https://connctd.com'>connctd Website</a></li>
         </ul>
     </div>
     <div class="page-wrapper">
