publish: Type fixed
generated from commit 41ec3a15ec650bdfbc5f3b05409494aad1491a07

--- a/index.html
+++ b/index.html
@@ -928,8 +928,9 @@ POST https://api.connctd.io/api/v1/things<br>
 </span><span class="p">}</span><span class="w">
 </span></code></pre>
 <p>To add a Thing you need to acquire a token with the scope <code class="prettyprint">connctd.connector</code> through the OAuth2
-process. After this you are able to create Things with the following request.
-<strong>Please note</strong>: componentIDs and propertyIDs can only consist of letters, numbers, &ldquo;-&rdquo;, &ldquo;_&rdquo; and should have a maximum size of 200 characters.</p>
+process. After this you are able to create Things with the following request.</p>
+
+<p><strong>Please note</strong>: componentIDs and propertyIDs can only consist of letters, numbers, &ldquo;-&rdquo;, &ldquo;_&rdquo; and should have a maximum length of 200 characters.</p>
 
 <p>Required scope: <code class="prettyprint">connctd.connector</code></p>
 
